02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: "02"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "nginx.cloudlet.io"
    http:
      paths:
      - pathType: Prefix
        path: "/home"
        backend:
          service:
            name: nginx 
            port:
              number: 8080
